--- a/templates/default.latex
+++ b/templates/default.latex
@@ -344,6 +344,13 @@ $endfor$
 \let\LanguageShortHands\languageshorthands
 \def\languageshorthands#1{}
 $endif$
+
+\usepackage{gensymb}
+\usepackage{mhchem}
+\usepackage{tcolorbox}
+\usepackage{fancyhdr}
+\usepackage{graphicx}
+\usepackage{titling}
 $for(header-includes)$
 $header-includes$
 $endfor$
@@ -436,6 +443,19 @@ $if(logo)$
 \logo{\includegraphics{$logo$}}
 $endif$
 $endif$
+
+
+\pagestyle{fancy}
+% \graphicspath{{./images/}}
+\fancyhead[C]{\includegraphics[width=2cm]{./images/fplogo}}
+\fancyhead[L]{$headertext$\\~\\}
+\fancyhead[R]{\thetitle{}\\~\\}
+\renewcommand{\headrulewidth}{0pt}
+\renewcommand{\footrulewidth}{2pt}
+\newtcolorbox{myquote}{colback=gray!25, colframe=gray!75!black}
+\renewenvironment{quote}{\begin{myquote}}{\end{myquote}}
+\let\OldRule\rule
+\renewcommand{\rule}[2]{\OldRule{\linewidth}{#2}}
 
 \begin{document}
 $if(has-frontmatter)$
